--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
+    "@stripe/stripe-js": "^4.2.0",
     "firebase": "^10.12.5",
     "next": "14.2.5",
     "react": "^18",
