--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
     "@stripe/stripe-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.5",
     "next": "14.2.5",
+    "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18"
   },
