--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       ".next/types/**/*.ts",
       "**/*.ts",
       "**/*.tsx"
-    ],
+, "src/app/sign-up/[[...sign-up]]/page.js", "src/app/sign-in/[[...sign-in]]/page.js"    ],
     "exclude": [
       "node_modules"
     ]
