--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "^14.2.5",
     "openai": "^4.55.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quizlet-flashcard": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
