--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-quizlet-flashcard": "^3.0.0"
+    "react-quizlet-flashcard": "^3.0.0",
+    "react-router-dom": "^6.26.1",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
